--- a/app/AlcoholCompass/AndroidManifest.xml
+++ b/app/AlcoholCompass/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name="com.alcoholcompass.MainActivity"
-            android:label="@string/app_name" android:theme="@android:style/Theme.Holo.Light">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
