--- a/app/AlcoholCompass/AndroidManifest.xml
+++ b/app/AlcoholCompass/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name="com.alcoholcompass.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
