--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -19,7 +19,11 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: mysql2
+  database: alcohol_compass
   pool: 5
   timeout: 5000
+  encoding: utf8
+  username: alcohol
+  password: wY73h8ogZzw3UbqcWbuJ
+  socket: /run/mysqld/mysqld.sock
