--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -6,9 +6,11 @@ gem 'rails', '4.0.0'
 group :production do
   gem 'mysql2'
 end
+
 group :development do
   # Use sqlite3 as the database for Active Record
   gem 'sqlite3'
+  gem 'awesome_print'
 end
 
 # Use SCSS for stylesheets
